<resources>
    <string name="app_name">Blood_Donation</string>
    <string-array name="bloods">
        <item>Blood Group</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
    <string-array name="cities">
        <item>Select City</item>
        <item>Lahore</item>
        <item>Islamabad</item>
        <item>Karachi</item>
        <item>Khushab</item>
        <item>Sargodha</item>
        <item>Peshawar</item>
        <item>Queta</item>
    </string-array>

    <string name="facebook_app_id">Your_Facebook_Id</string>
    <string name="fb_login_protocol_scheme">fbFB_Id</string>
    <string name="setting_name">Logout</string>
    <string name="title_activity_landing">LandingActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="or">----------- OR -----------</string>

    <string name="register">Register</string>
    <string name="et_hint_email">Email</string>
    <string name="str_login">Login</string>
    <string name="str_google">Google</string>
    <string name="et_hint_password">Password</string>
    <string name="str_facebook">Facebook</string>
    <string name="emergency">Emergency</string>
    <string name="todo">TODO</string>
    <string name="login_with_phone_number">Login With Phone Number</string>

    <string name="on_board_str_skip">Skip</string>
    <string name="on_board_str_get_started">Get started</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="add_a_long_description_here_about_your_app_s_important_feature">Add a long description here about your app\'s important feature.</string>
    <string name="section_format">Dummy Section</string>

    <string name="be_a_blood_donor">Be A Blood Donor</string>
    <string name="become_a_blood_donor_save_lives"><![CDATA[Become A Blood Donor & Save Lives]]></string>
    <string name="user_will_be_able">Users will be able to create a donor account and will be able to save lives.</string>
    <string name="emergency_mode_is_there">Emergency Mode Is There For You</string>
    <string name="find_blood_donors"><![CDATA[Find Blood Donors & Request For Blood]]></string>
    <string name="find_a_donor">Find A Donor</string>
    <string name="emergency_mode">Emergency Mode</string>

    <string name="in_case_of_emergency">In case of emergency, users will be able to get contact numbers of public account of donors.</string>
    <string name="users_will_be_able_to_create">Users will be able to create a donor account and will be able to save lives.</string>
    <string name="on_board_str_back">Back</string>


</resources>
